Se implementó el sistema de Cajas como en un supermercado, se pueden crear varias cajas(fisicas) y abrir varias al mismo tiempo, almacena la hora de apertura, cierre de caja, monto total ganado en el turno y un boton para cerrar la caja, en el ticket sale el nombre de la caja y el usuario que lo operó.

--- a/src/main/resources/templates/Dashboard.html
+++ b/src/main/resources/templates/Dashboard.html
@@ -114,18 +114,27 @@
             <div class="col">
                 <h2 class="text-center text-bg-light rounded-3 p-1">Estadísticas de Ventas
                 </h2>
-                <div class="chart-container">
-                    <canvas id="myChart"></canvas>
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body">
+                        <div class="chart-container">
+                            <canvas id="myChart"></canvas>
+                        </div>
+                    </div>
                 </div>
+
             </div>
             <div class="col">
                 <h2 class="text-center  text-bg-light rounded-3 p-1">Tendencia de Ventas</h2>
-                <div class="chart-container">
-                    <canvas id="ventasXDia"></canvas>
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body">
+                        <div class="chart-container">
+                            <canvas id="ventasXDia"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col">
                 <h2 class="text-center text-bg-light rounded-3 p-1 section-title">Ventas vs Gastos</h2>
                 <div class="chart-container">
@@ -139,7 +148,7 @@
                     <canvas id="earnStats"></canvas>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
