--- a/src/main/resources/templates/usuarios/usuarios-list-admin.html
+++ b/src/main/resources/templates/usuarios/usuarios-list-admin.html
@@ -18,42 +18,45 @@
         <h1 class="text-primary" align="center" th:text="${titulo}"></h1>
         <br>
         <div class="container mt-4">
-            <table id="tabla-usuarios" class="table table-striped table-bordered" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Nombre</th>
-                        <th>Email</th>
-                        <th>Rol</th>
-                        <th>Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="u : ${usuarios}" >
-                        <td th:text="${u.id}"></td>
-                        <td th:text="${u.nombrecompleto}"></td>
-                        <td th:text="${u.correo}"></td>
-                        <td th:text="${u.rol.nombre}"></td>
-                        <td>
-                            <a th:href="@{/usuarios/editar/{id}(id=${u.id})}" class="btn btn-sm btn-warning">Editar</a>
-                            <!-- <a th:href="@{/usuarios/borrar/{id}(id=${u.id})}" class="btn btn-sm btn-danger">Borrar</a> -->
-                            <a href="#" class="btn btn-sm btn-danger btn-delete"
-                                th:attr="data-href=@{/usuarios/borrar/{id}(id=${u.id})}">
-                                Borrar
-                            </a>
-                        </td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th>#</th>
-                        <th>Nombre</th>
-                        <th>Email</th>
-                        <th>Rol</th>
-                        <th>Opciones</th>
-                    </tr>
-                </tfoot>
-            </table>
+            <div class="card p-2">
+                <table id="tabla-usuarios" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Nombre</th>
+                            <th>Email</th>
+                            <th>Rol</th>
+                            <th>Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="u : ${usuarios}">
+                            <td th:text="${u.id}"></td>
+                            <td th:text="${u.nombrecompleto}"></td>
+                            <td th:text="${u.correo}"></td>
+                            <td th:text="${u.rol.nombre}"></td>
+                            <td>
+                                <a th:href="@{/usuarios/editar/{id}(id=${u.id})}"
+                                    class="btn btn-sm btn-warning">Editar</a>
+                                <!-- <a th:href="@{/usuarios/borrar/{id}(id=${u.id})}" class="btn btn-sm btn-danger">Borrar</a> -->
+                                <a href="#" class="btn btn-sm btn-danger btn-delete"
+                                    th:attr="data-href=@{/usuarios/borrar/{id}(id=${u.id})}">
+                                    Borrar
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th>#</th>
+                            <th>Nombre</th>
+                            <th>Email</th>
+                            <th>Rol</th>
+                            <th>Opciones</th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
             <div class="text-end mt-3">
                 <a th:href="@{/usuarios/nuevo}" class="btn btn-outline-primary">Nuevo Usuario</a>
             </div>
