agregados  los provedores con su respectivo guardar/editar/eliminar

--- a/src/main/resources/templates/layout-dashboard.html
+++ b/src/main/resources/templates/layout-dashboard.html
@@ -86,6 +86,7 @@
                 <li class="nav-item"><a th:href="@{/ofertas/listadoAdmin}" class="nav-link text-white">Ofertas</a></li>
                 <li class="nav-item"><a th:href="@{/usuarios/listadoAdmin}" class="nav-link text-white">Usuarios</a>
                 </li>
+                <li class="nav-item"><a th:href="@{/proveedores/listar}" class="nav-link text-white">caca</a></li>
                 <li class="nav-item"><a th:href="@{/ventas/nuevo}" class="nav-link text-white">Ventas</a></li>
                 <li class="nav-item"><a th:href="@{/reportes}" class="nav-link text-white">Reportes</a></li>
                 <li class="nav-item"><a th:href="@{/cajas/listadoAdmin}" class="nav-link text-white">Cajas</a></li>
